mi primera modificiacion, segundo commit

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Facu</h1>
     <p><b>Facundo</b> es una <strong> persona</strong>.<br> Todos somos personas.</p>
+    <h2>segunda modificacion.</h2>
 </body>
 </html>
